--- a/band_02/main.tex
+++ b/band_02/main.tex
@@ -72,6 +72,7 @@
 	%Bilder liegen in Unterordnern. Hier Windows-Codiert. Für bessere Betriebssysteme \ mit / ersetzen.
 	%Je nach Ordnerstruktur müssen auch im ersten Pfad die ..\angepasst werden.
 	{asche_im_wind/gfx/}
+	{schwarze_hand/gfx/}
 	{klamm_und_heimlich/gfx/}
 	{bergkoenig/gfx/}
 	{spielhilfen/gfx/}
@@ -100,16 +101,26 @@
 	\end{centering}
 }
 \neueseite
-\subsection*{Version 0.5 vom \today}
+\subsection*{Version 0.6 vom \today}
 %TODO
+% Überschriften außerhalb von multicols zentriert?
 %Spielhilfen: Beschreibung der Brauerei (ggf. mit Videos)
-%Spielhilfen: Hummerier-Encounter formatieren
 %Neue Illustrationen einpflegen
-%Illustrationen aus Bernards Grafik-Paket einpflegen
 %Vorwort schreiben (Xaver)
 %Nachbesserungen der verbleibenden Autor*innen
 %TODO
 \subsection*{Versionsgeschichte}
+\subsubsection*{0.6}
+Inhaltsverzeichnis gekürzt
+
+Encounter-Spielhilfe fertig layoutet und mit dem Autor abgestimmt
+
+\enquote{Schwarze Hand} fertig layoutet
+
+Abenteuer aus dem Bestand bebildert
+
+Kleinere Korrekturen
+
 \subsubsection*{0.5}
 Encounter-Spielhilfe eingefügt und erste Hälfte layoutet
 
@@ -140,12 +151,12 @@ Groblayout viertes Abenteuer
 
 Kreaturenkästen für Klamm und heimlich
 
-\subsubsection*{0.3}
-Vereinheitlichung Zitation und andere Markups in den drei Abenteuern
-
-Plätze für Grafiken (vorbehaltlich Textänderungen nach Feedback)
-
-Hierarchie der Überschriften vereinheitlicht
+%\subsubsection*{0.3}
+%Vereinheitlichung Zitation und andere Markups in den drei Abenteuern
+%
+%Plätze für Grafiken (vorbehaltlich Textänderungen nach Feedback)
+%
+%Hierarchie der Überschriften vereinheitlicht
 
 %\subsubsection{0.2}
 %Groblayout drei Abenteuer
@@ -182,6 +193,7 @@ Hierarchie der Überschriften vereinheitlicht
 }
 \credit{Illustrationen}{
 	\href{https://www.artstation.com/bernhard\_eisner}{Bernhard Eisner}\\
+	Matthias Thanos\\
 	% Norman Obst\\
 	% René Dudziak\\
 	\href{https://www.zillie-zeh.de/}{Zillie Zeh}
@@ -191,9 +203,10 @@ Hierarchie der Überschriften vereinheitlicht
 }
 
 \credit{Satz}{
-	\href{https://github.com/XaverStiensmeier/IlarisGlossaryEntries}{Xaver Stiensmeier}\\
-	Lukas Ruhe\\
 	Matthias Ott\\
+	Lukas Ruhe\\
+	\href{https://github.com/XaverStiensmeier/IlarisGlossaryEntries}{Xaver Stiensmeier}\\
+	
 }
 \credit{Korrektorat}{
 	% Matthias Ott\\
@@ -289,7 +302,7 @@ farbe=rot
 
 
 \kapitel{Spielhilfen}
-\section{Übersicht über verfügbare Spielhilfen}
+\section{Neue Entwicklungen bei den Spielhilfen}
 \input{spielhilfen/spielhilfen.tex}
 
 \newpage
