--- a/band_02/schwarze_hand/schwarze-hand.tex
+++ b/band_02/schwarze_hand/schwarze-hand.tex
@@ -93,6 +93,9 @@ Das von einer gut zwei Schritt hohen Palisade umgebene \textbf{Boggerode} liegt 
 Ein kleiner Bach durchquert Lichtung und Ort, der aus sechs Gehöften, einem kleinen \textbf{Peraine}-Tempel sowie einer Schmiede mit angebauter Gaststube besteht.
 Der prächtigste Hof, direkt neben dem Tor in der Palisade, wirkt allerdings verlassen.
 Der hellste Lichtschein strahlt aus der Schmiede.
+\begin{center}
+\zeichnung[0.27\textwidth]{schmied.png}
+\end{center}
 
 Schmiedin \textbf{Angunde} bietet dort neben dem hellen Angenburger Bier auch ihren selbstgebrannten Korn an, weshalb die kleine Stube am Ende des Tagwerks stets gut gefüllt ist.
 \textbf{Angunde} wird die Charaktere natürlich sofort bewirten.
@@ -139,9 +142,15 @@ Der Autor dieses Abenteuers geht jetzt davon aus, dass die Charaktere so heldenh
  Wichtig ist, dass das Blut der geschlachteten Tiere nicht zu früh gerinnt, sonst drohen schwerste Lebensmittelvergiftungen.
 }
 
+\zeichnung{Essen.JPG}
+
+\vfill
+
 \kasten{
 In dem unwahrscheinlichen Fall, dass die Charaktere kein Interesse am Verbleib \textbf{Vittel}s zeigen, beginnt jetzt für die ganze Spielrunde die Suche nach einem passenden Brettspiel für den Rest des Abends.
 }
+
+\newpage
 
 \abschnitt{Am nächsten Morgen}
 
@@ -162,9 +171,12 @@ Die Goblins sind wachsam und rechnen durchaus mit einem Angriff durch die Charak
 
 \kreaturgoblin
 \textbf{Sulrik:} WS +1/+2, Initiative +2, AT/VT +2, TP +1
-\bigskip
+
+\zeichnung[0.45\textwidth]{Goblin.png}
+
 
 Regeltechnisch haben die Bogenschützen die \emph{Aktion Verzögern} gewählt und würden selbst bei niedrigerer Initiative als die Charaktere sofort (natürlich mit einem Malus von -4, \textit{Ilaris:37}) schießen, während die Speerkämpfer sich in \textit{voller Verteidigung} befinden und hinter den Baumstämmen eine \emph{vorteilhafte Position} einnehmen.
+
 
 Jedem der Charaktere, dem eine Probe auf 
 
@@ -174,7 +186,7 @@ gelingt, fällt ein, dass die eisernen Kreuzer ähnlich silbern blinken wie Silb
 
 Es ist auch möglich, \textbf{Sulrik} einzuschüchtern. Dabei muss eine Probe auf
 
-\probe{autorität}{Autorität (Einschüchtern)}{
+\probe{autorität}{Autorität: Einschüchtern (I)}{
 gegen den \textit{MU-PW} \textbf{Sulrik}s (8) abgelegt werden. Die Probe ist aber um -8 erschwert, da \textbf{Sulrik} sich der Überzahl der Goblins bewusst ist.
 }
 
@@ -202,13 +214,17 @@ Sollte Sulrik fliehen, wird auch der Rest der Bande die Flucht ergreifen.
 Sollten die Goblins siegen, werden sie den Charakteren alle Habseligkeiten abnehmen, ihnen aber kein weiteres Leid zufügen.
 Der Rest des Abenteuers dürfte dann jedoch schwieriger werden. 
 
+\platz
 
+\zeichnung{rededuell.jpg}
+
+\platz
 
 \abschnitt{Wengenholm}
 
 
-Nach drei Stunden erreichen die Charaktere dann \textbf{Wengenholm}, welches eine halbe Meile unterhalb der Mündung der \textbf{Wenge} in die \textbf{Ange} unterhalb der immer noch imposanten Ruine der \textbf{Angenburg} ruht.
-\textbf{Wengenholm} selbst hat etwa 350 Einwohner und ist mit einer soliden Palisade umzäunt.
+Nach drei Stunden erreichen die Charaktere dann \textbf{Wengenholm}, welches eine halbe Meile unterhalb der Mündung der Wenge in die Ange unter der imposanten Ruine der \textbf{Angenburg} ruht.
+\textbf{Wengenholm} hat etwa 350 Einwohner und ist mit einer soliden Palisade umzäunt.
 	
 	Ein Anschlag neben dem Tor lobt 5 Dukaten auf die Ergreifung eines jeden Mitgliedes der Räuberbande der \textbf{„Schwarzen Hand“} aus, die die letzten Monde mehrere Überfälle auf Reisende begangen hatte.
 	
@@ -220,12 +236,13 @@ Regeltechnisch handelt es sich um eine Ermittlung.
 (Alternativ kann natürlich auch ausgespielt werden, wie die Charaktere sich durch das Dorf fragen, bis sie erfahren, wohin \textbf{Vittel} zuerst gegangen ist.)
 
 \probe{gebraeuche}{Gebräuche (12)}{
-    Alternativ: \textit{Menschenkenntnis} oder \textit{Überreden}. 
-    Dauer: eine halbe Stunde
+    Alternativ: \textit{Menschenkenntnis}/\textit{Überreden}.\\
+    Dauer: eine halbe Stunde\\
+    Bei Misslingen kann die Probe beliebig oft wiederholt werden.
+    Die Charaktere verlieren allerdings jeweils Zeit, für weiteres Umhören im Ort.
+    
 }
 
-Bei Misslingen kann die Probe beliebig oft wiederholt werden.
-Die Charaktere verlieren allerdings jeweils ein wenig Zeit, da sie sich im Ort umhören müssen.
 
 So erfahren die Charaktere, dass \textbf{Vittel} sich zur gräflichen Schreibstube begeben hatte.
 Dort lässt sich in der Regel vom Markttag bis zum Rohalstag die Schreiberin \textbf{Janne Pflögler} antreffen, die sich nicht nur um die gräfliche Korrespondenz kümmert, sondern denjenigen, die des Schreibens unkundig sind, auch Briefe vorliest und aufsetzt.
@@ -234,13 +251,15 @@ Trotz des Namens ist das Gebäude nur ein wenig größer ist die umliegenden Hä
 Graf \textbf{Jallik} nutzt es, wenn er sich in Wengenholm aufhält, da die Angenburg noch immer keine angemessenen Unterkünfte bereithält.
 Im Augenblick können die Charaktere aber nur den im \textbf{Jahr des Feuers} versehrten Verwalter \textbf{Alrik Altschuh} (früh ergraut, Brandnarben im Gesicht, das linke Bein endet unter dem Knie in eine hölzerne Prothese) antreffen, der bereitwillig Auskunft gibt:
 
-\vorlesen{„Ja, gestern um die Mittagsstund‘ tauchte hier ein junger Bursch auf und bot einen zauberischen Trank an.
+\vorlesen{„Ja, gestern um die Mittagsstund' tauchte hier ein junger Bursch auf und bot einen zauberischen Trank an.
 	Zumindest hielt er sein Mitbringsel dafür.
 	Die Frau Pflögler erklärte sich bereit, das zu untersuchen, sie versteht nämlich etwas davon.
 	Also bat sie darum, früher nach Hause gehen zu können und nahm den jungen Burschen mit sich.“}
 
 Auf Nachfrage kann er den Weg beschreiben: \textbf{Janne} wohnt in den Wäldern südlich des Dorfes, etwa zwei Wegstunden Fußmarsch entfernt.
 Außerdem kann er erzählen, dass Graf \textbf{Jallik} nicht anwesend ist, sondern weiter südöstlich die Räuberbande der \textbf{„Schwarzen Hand“} jagt.
+
+\neuespalte
 
 \abschnitt{Auf dem Weg in den Wald}
 
@@ -253,30 +272,30 @@ Graf \textbf{Jallik} war es vor ein paar Tagen tatsächlich gelungen, die Räube
 Nur etwa eine Handvoll hatte sich retten können und war blindlings gen Norden geflohen, nicht wissend, wie nahe sie sich dem Grafensitz schon befinden.
 Sie haben vor kurzem etwa 40 Schritt abseits des Weges einen nicht ganz so dichten Fleck Waldes gefunden und begonnen, ein improvisiertes Lager aufzuschlagen.
 
-\probenkasten[
-    bild=wahrnehmung,
-    gruppenprobe=gut,
-    farbe=gruen,
-    pw=Y+X,
-]{Wachsamkeit}{
-Die Charaktere können die Räuber hören, sofern ihnen eine vergleichende Gruppenprobe (I) 
-gegen \textit{Heimlichkeit:Pirschen} der Räuber (4) (Die Räuber sind nicht aufmerksam) gelingt. 
-}
+%\probenkasten[
+%    bild=wahrnehmung,
+%    gruppenprobe=gut,
+%    farbe=gruen,
+%    pw=Y+X,
+%   anzahl=1,
+%]{Wachsamkeit}{
+%Die Charaktere können die Räuber hören, sofern ihnen eine vergleichende Gruppenprobe (I) 
+%gegen \textit{Heimlichkeit:Pirschen} der Räuber (4) (die Räuber sind nicht aufmerksam) gelingt. 
+%}
 
+\probe{wahrnehmung}{Wahrnehmung: Wachsamkeit (I, 4+X)}{Die Charaktere können die Räuber hören, sofern ihnen eine vergleichende Gruppenprobe 
+	gegen \textit{Heimlichkeit: Pirschen} der Räuber (die Räuber sind nicht aufmerksam) gelingt. }
 
 Haben die Charaktere die Geräusche der Bande gehört, können sie versuchen, sich an das Lager anzuschleichen. 
 
-\probenkasten[
-    bild=attribute,
-    gruppenprobe=gut,
-    farbe=braun,
-    pw=Y+X,
-]{Pirschen}{
-Dafür müssen sie eine vergleichende Gruppenprobe (I)
-gegen die Wachsamkeit 
-der Räuber (6) ablegen.
+\probe{heimlichkeit}{Heimlichkeit: Pirschen\\ (I, 6+X)}
+{
+Dafür müssen sie eine vergleichende Gruppenprobe %(I)
+gegen die Wachsamkeit  der Räuber %(6)
+ablegen.
 }
 
+\zeichnung[0.3\textwidth]{eddard.png}
 
 Gelingt die Probe, so können sie die Räuber auf einer kleinen, etwa zehn Schritt durchmessenden Lichtung überraschen, die durch den Sturz einer Buche entstanden ist. Sie bauen gerade mit Decken und Fellen einen behelfsmäßigen Unterschlupf über ein paar feste Äste. Die am Boden liegende \textbf{Grimma} kann anhand einer alten Narbe sofort identifiziert werden, sollten die Charaktere die Aushänge in Wengenholm gelesen haben.
 
@@ -286,33 +305,29 @@ Es befinden sich hier so viele Räuber wie Charaktere +1, allerdings sind \textb
 Es empfiehlt sich, im Falle einer sehr kampfschwachen Gruppe die Anzahl der Räuber zu reduzieren oder die Anzahl ihrer schon erlittenen Wunden heraufzusetzen.
 }
 
-Sollten die Räuber die Charaktere haben hören können, so haben sie ihre Waffen in der Hand (Holzspeer oder Knüppel), Grimma zielt kniend mit ihrem Kurzbogen auf sie.
+Sollten die Räuber die Charaktere haben hören können, so haben sie ihre Waffen in der Hand (Holzspeer oder Knüppel), \textbf{Grimma} zielt kniend mit ihrem Kurzbogen auf sie.
 
 \kreaturraeuber
 
-Sie werden nicht bis zum Tode kämpfen und sind bei fünf Einschränkungen kampfunfähig (also keine Probe auf Zähigkeit, um handlungsfähig zu bleiben). Sobald die Mehrheit von ihnen kampfunfähig ist, wird der Rest sich ergeben. Sie lassen sich widerstandslos fesseln und geben zu, dass sie vor ein paar Tagen dem Grafen nur knapp entkommen sind, weshalb sie auch nur wenig Hab und Gut bei sich tragen. Die Charaktere müssen sich allerdings jetzt entscheiden, was sie mit den Gefangenen machen. Sie hier festzubinden, um sie später abzuholen, ist natürlich machbar.
+Sie werden nicht bis zum Tode kämpfen und sind bei fünf Einschränkungen \textit{kampfunfähig} (also keine Probe auf Zähigkeit, um handlungsfähig zu bleiben). Sobald die Mehrheit von ihnen \textit{kampfunfähig} ist, wird der Rest sich ergeben. Sie lassen sich widerstandslos fesseln und geben zu, dass sie vor ein paar Tagen dem Grafen nur knapp entkommen sind, weshalb sie auch nur wenig Hab und Gut bei sich tragen.
+Die Charaktere müssen sich allerdings jetzt entscheiden, was sie mit den Gefangenen machen. Sie hier festzubinden, um sie später abzuholen, ist natürlich machbar.
+
 Sollten die Charaktere unterliegen, werden die Räuber ihnen alles abnehmen, was sie am Leibe tragen und gefesselt zurücklassen. 
 
-\kasten{
-In diesem Fall sieht der Autor nur eine Lösung des Dilemmas: Janne und Vittel haben mittlerweile das Ansinnen des Einhorns verstehen und die Phiole vernichten können. Jetzt befinden sie sich auf dem Rückweg nach Wengenholm und können den Charakteren zu Hilfe eilen. Eine zusätzliche Belohnung haben diese sich zwar nicht verdienen können, 15 EP für ihre Mühen sind allerdings möglich.
+\info{
+In diesem Fall sieht der Autor nur eine Lösung des Dilemmas: \textbf{Janne} und \textbf{Vittel} haben mittlerweile das Ansinnen des Einhorns verstehen und die Phiole vernichten können. Jetzt befinden sie sich auf dem Rückweg nach Wengenholm und können den Charakteren zu Hilfe eilen. Eine zusätzliche Belohnung haben diese sich zwar nicht verdienen können, 15 EP für ihre Mühen sind allerdings möglich.
 }
 
-Sollten die Charaktere die Räuber schon auf dem Weg nicht gehört haben, so konnten die Räuber sie bemerken, sofern sie beim Betreten des Waldes sich nicht bewusst fürs Schleichen entschieden hatten. Die Bande wird dann vorrauseilen und den Charakteren auflauern. Dabei kniet sich Grimma hinter einen Baumstamm und schießt mit ihrem Bogen aus etwa zehn Schritt Entfernung auf den am stärksten aussehenden Gegner, während die anderen aus etwa acht Schritt Entfernung auf die Charaktere zustürmen. Die Charaktere gelten als überrascht, sofern ihnen vorher keine 
+Sollten die Charaktere die Räuber schon auf dem Weg nicht gehört haben, so konnten die Räuber sie bemerken, sofern sie beim Betreten des Waldes sich nicht bewusst für's Schleichen entschieden hatten. Die Bande wird dann vorauseilen und den Charakteren auflauern. Dabei kniet sich \textbf{Grimma} hinter einen Baumstamm und schießt mit ihrem Bogen aus etwa zehn Schritt Entfernung auf den am stärksten aussehenden Gegner, während die anderen aus etwa acht Schritt Entfernung auf die Charaktere zustürmen. 
 
 
-\probenkasten[
-    bild=wahrnehmung,
-    gruppenprobe=gut,
-    farbe=gruen,
-    pw=8+X,
-]{wahrnehmung}{
-**Gruppenprobe (I)** auf Wachsamkeit  
-gegen aufgrund der gut gewählten Deckung höherem  Pirschen
-der Räuber (8) gelingt.
+\probe{wahrnehmung}{Wahrnehmung: Wachsamkeit (I, 8+X)}{
+Die Charaktere gelten als \textit{überrascht}, sofern ihnen vorher keine vergleichende Probe gegen -- aufgrund der gut gewählten Deckung höherem -- Pirschen
+der Räuber gelingt.
 }
 
-\kasten{
-Zur Kampfunfähigkeit oder Aufgabe der Räuber oder Charaktere gilt das weiter oben gesagte.
+\info{
+Zur \textit{Kampfunfähigkeit} oder Aufgabe der Räuber oder Charaktere gilt das weiter oben gesagte.
 }
 
 
@@ -323,78 +338,98 @@ Sind die Charaktere aus dem Kampf siegreich ausgegangen und haben die gefangen g
 
 Die Charaktere können das Haus betreten oder zunächst die Umgebung erkunden, in beiden Fällen können sie herausfinden, dass die Hintertür vom Garten aus mit Gewalt eingerannt wurde. Eine Probe auf 
 
-
-
-\probe{wahrnehmung}{Sinnenschärfe (12)}{
-
-}
+\probe{wahrnehmung}{Wachsamkeit: Sinnenschärfe (12)}{
 ergibt, dass ein Pferd die Hintertür eingerannt haben muss und in das Haus gestürmt ist. 
+}
 
 
 Die angrenzende Küche ist teilweise verwüstet, und zwar lediglich im direkt an die Hintertür angrenzenden Bereich. Außerdem wurde ein Tisch mit allerlei Kräutern und Gewürzen umgeworfen, der neben der Tür zum Flur gestanden hatte und jetzt vor der Tür liegt. Er lässt sich ohne weiteres von beiden Seiten übersteigen. Eine Probe auf 
-
-
-\info{
-Sinnenschärfe (12) 
-dass zwei Personen von der Küche aus in das Haus geflohen sein müssen. 
+\probe{wahrnehmung}{Wachsamkeit: Sinnenschärfe (12)}{
+ergibt, dass zwei Personen von der Küche aus in das Haus geflohen sein müssen. 
 }
 
 
 Ist der Erfolgswert der Probe 16 oder höher, so lässt sich sogar feststellen, dass die Fliehenden den Tisch hinter sich umgekippt haben und auf direktem Weg aus der Haustür ins Freie hinaus geflohen sein müssen. 
 
 
-Die weiteren Räume des Hauses sind eine Stube sowie ein Schlafzimmer. Alles einfach, aber bequem ausgestattet. In der Stube befindet sich neben ein paar Sitzgelegenhei-ten um einen niedrigen Tisch eine verschlossene Bücher-kiste. Das lässt sich mit einem flüchtigen Blick in die Zimmer feststellen. Die Bücherkiste enthält neben eini-gen humorvoll geschriebenen Kaiser Valpo-Geschichten ein Kompendium über die Heil- und Nutzpflanzen des nördlichen Koschs sowie verschiedene Abhandlungen zur Anwendung von Magica Contraria (Antimagie) der Akademie der Magischen Rüstung zu Gareth.
+Die weiteren Räume des Hauses sind eine Stube sowie ein Schlafzimmer. Alles ist einfach, aber bequem ausgestattet. In der Stube befindet sich neben ein paar Sitzgelegenhei-ten um einen niedrigen Tisch eine verschlossene Bücherkiste. Das lässt sich mit einem flüchtigen Blick in die Zimmer feststellen. Die Bücherkiste enthält neben einigen humorvoll geschriebenen Kaiser-Valpo-Geschichten ein Kompendium über die Heil- und Nutzpflanzen des nördlichen Koschs sowie verschiedene Abhandlungen zur Anwendung von \textbf{Magica Contraria} (Antimagie) der \textbf{Akademie der Magischen Rüstung zu Gareth}.
 
 Sollten die Charaktere die Umgebung vor dem Eingangsbereich des Hauses untersuchen, so ergibt eine Probe auf 
 
-
-\info{
- Sinnenschärfe (12) 
-dass zwei Personen auf diesem Weg das Haus verlassen haben sein müssen. 
+\probe{wahrnehmung}{Wachsamkeit: Sinnenschärfe (12)}{
+dass zwei Personen auf diesem Weg das Haus verlassen haben müssen. 
 }
+Ist der Erfolgswert der Probe 16 oder höher, so lässt sich sogar feststellen, dass die beiden beim Verlassen gerannt sind, und zwar vor nicht allzu langer Zeit.
 
-
-Ist der Erfolgswert der Probe 16 oder höher, so lässt sich sogar feststellen, dass die beiden beim Verlassen gerannt sind, und zwar vor nicht allzu langer Zeit. Die Spuren lassen sich ohne Probleme bis zum Waldrand verfolgen. Dort können die Charaktere Hilferufe vernehmen, denen sie relativ leicht folgen können.
+Die Spuren lassen sich ohne Probleme bis zum Waldrand verfolgen. Dort können die Charaktere Hilferufe vernehmen, denen sie relativ leicht folgen können.
+\begin{center}
+\zeichnung[0.3\textwidth]{alchemie.jpg}	
+\end{center}
 
 \abschnitt{Am Ziel}
-Auf einem Baum in etwa fünf Schritt Höhe können sie Janne Pflögler und Vittel erkennen. Beide befinden sich ganz offensichtlich nicht in bester Verfassung, die Kleidung ramponiert, Schrammen an Händen und Gesicht. Zu Füßen des Baumes ein schneeweißes Einhorn, welches Hufe scharrend in Richtung der beiden schnaubt. Vittel ruft den Charakteren sofort zu, sobald er sie sieht. In dem Augenblick aber wird das Einhorn sich umwenden, einige Schritt auf die Charaktere zulaufen (bis es etwa zehn Schritt vom Baum entfernt ist) und sie mit seinen Gedankenbildern bedrängen. Diese sind im Gegensatz zu Drachen keine Gedankensprache, da Einhörnern die Fähigkeit zur Abstraktion ihrer Geisteswelt fehlt. Ähnlich dem Zauber *Gedankenbilder Elfenruf* können jedoch alle Charaktere versuchen, das Empfangen der Bilder mit einer Konterprobe auf 
+Auf einem Baum in etwa fünf Schritt Höhe können sie \textbf{Janne Pflögler} und \textbf{Vittel} erkennen.
+	Beide befinden sich ganz offensichtlich nicht in bester Verfassung, die Kleidung ramponiert, Schrammen an Händen und Gesicht.
+	Zu Füßen des Baumes scharrt ein schneeweißes \textbf{Einhorn} mit den Hufen und schnaubt in Richtung der beiden.
+	
+	\textbf{Vittel} ruft den Charakteren sofort zu, sobald er sie sieht.
+	In dem Augenblick aber wird das \textbf{Einhorn} sich umwenden, einige Schritt auf die Charaktere zulaufen (bis es etwa zehn Schritt vom Baum entfernt ist) und sie mit seinen Gedankenbildern bedrängen.
+	Diese sind im Gegensatz zu Drachen keine Gedankensprache, da Einhörnern die Fähigkeit zur Abstraktion ihrer Geisteswelt fehlt.
+ 
 
-
-\probenkasten{MR (I, 24)}{}
-
-zu verhindern. 
-
-Alle Charaktere, denen die Konterprobe mißlingt, werden  regelrecht überwältigt von Bildern eines grausam verendenden Tieres, dem das Alicorn aus der Stirn geschnitten wurde sowie verzerrten Bildern von Menschen, die das Alicorn zu feinem Staub mahlen. Einem jeden der Charaktere muss eine Probe 
-
-
-\probenkasten{Willenskraft (I, 16)}{}
-gelingen, um nicht für einige Momente benommen zu werden. 
-
-
-Ein Misslingen der Probe hat keine direkten Auswirkungen auf den Fortgang des Geschehens, sollte den Charakteren aber die arkane Macht des Einhorns vor Augen führen. Sollte den Spielenden noch nicht klar geworden sein, dass ein Angriff auf ein Einhorn, dem heiligen Tier des Halbgottes Nandus, für normale Aventurier einen Frevel darstellt, so wäre jetzt der richtige Moment gekommen, es beiläufig zu erwähnen.
-
-
-Das Zauberwesen wird die Charaktere nicht angreifen, sie allerdings auch nicht auf mehr als 12 Schritt an den Baum heranlassen. Da es ständig laut schnaubt, ist eine fehlerlose Verständigung mit Vittel und Janne Pflögler nicht möglich. Janne hatte nach den ersten Gedankenbildern des Einhorns sich mit Antimagie versucht zu schützen. Dafür hatte sie zunächst den Zauber **Verständigung stören** mit der Modifikation *Zauber aufheben* gewirkt, noch bevor das Einhorn versuchen konnte, ihr vom zermahlenen Alicorn zu berichten. Während das Einhorn noch verblüfft war, dass die junge Hexe versuchte, sich gegen seine Kontaktaufnahme zu wehren, wirkte Janne den Zauber **Verständigung stören** mit der Modifikation *Magie unterdrücken*. Allerdings muss sie den Zauber stündlich neu wirken, um nicht von den Bildern des Einhorns überwältigt zu werden. Dadurch besitzt sie noch gerade genug Astralenergie, um ein kleines Ästchen mit einer kurzen, geschriebenen Nachricht per Hexenholz den Charakteren zunächst zukommen und wieder zurückfliegen zu lassen. 
-
-
-Janne befindet sich unter Schock und schafft es daher nicht, die Botschaften des Einhorns zu verstehen. Die Charaktere müssen also versuchen, den Bedrängten klarzumachen, dass das Einhorn bei ihnen zerriebenes Alicorn eines gewaltsam getöteten Einhorns vermutet. Das Einhorn wird die Charaktere nicht an den Baum heranlassen, ein Überklettern von benachbarten Bäumen ist dagegen möglich. Letztlich sollte jede halbwegs logische Idee von Seiten der Spielenden honoriert werden.
-
-
-Sobald Vittel die tatsächliche Absicht des Einhorns verstanden hat, wird er die Phiole auf den Boden werfen, wo sie vom Einhorn sofort zertreten und der Inhalt mit den Hufen in den Waldboden gestampft wird. Anschließend verschwindet die magische Kreatur mit einem letzten Schnauben genauso schnell im Wald, wie sie erschienen ist.
-
-
-Vittel und Janne sollten dann vom Baum klettern können, abgesehen von ein paar Kratzern körperlich wohlbehalten, die Knie noch schlotternd vom Schreck. Janne setzt sich erst einmal auf den Waldboden, um ihre Gedanken zu sammeln. Schnell kann sie wieder klar denken und begreift das Geschehene. Im Zweifelsfall kann sie die Charaktere über den Hintergrund der Phiole aufklären. Sowohl Vittel wie Janne werden sich sehr dankbar zeigen, die junge Hexe sie in die Stube ihres Hauses einladen und erst einmal einen kräftigenden Tee aufbrühen, zu dem sie noch leckere Haferplätzchen stellt. Zum Dank gibt sie den Charakteren eine Feldflasche mit 3 Portionen Einbeerentrank (1 x HQ), der noch 18 Monde haltbar ist, ein Döschen mit 2 Erschöpfungspastillen, die noch 12 Monde haltbar sind sowie ein Tiegelchen mit 2 
+\probenkasten[
+    bild=wahrnehmung,
+    gruppenprobe=nein,
+    farbe=blau,
+    pw=24,
+    anzahl=1,
+]
+{Magieresistenz (I, 24)}{Ähnlich dem Zauber \biglittlecap{Gedankenbilder Elfenruf} können jedoch alle Charaktere versuchen, das Empfangen der Bilder mit einer \textit{Konterprobe} zu verhindern.}
 
 
 
+Alle Charaktere, denen die \textit{Konterprobe} mißlingt, werden  regelrecht überwältigt von Bildern eines grausam verendenden Tieres, dem das Alicorn aus der Stirn geschnitten wurde sowie verzerrten Bildern von Menschen, die das Alicorn zu feinem Staub mahlen. Einem jeden der Charaktere muss eine Probe auf 
 
-Portionen Brandsalbe (2 x HQ). Vittel bezahlt sie einen anständigen Preis für den Heiltrank (den sie nicht bereit ist, weiter zu veräußern, geschweige denn zu verschenken).
+
+\probe{selbstbeherrschung}{Willenskraft (I, 16)}{
+gelingen, um nicht für einige Momente benommen zu werden. Ein Misslingen der Probe hat keine direkten Auswirkungen auf den Fortgang des Geschehens, sollte den Charakteren aber die arkane Macht des Einhorns vor Augen führen. }
+
+Sollte den Spielenden noch nicht klar geworden sein, dass ein Angriff auf ein Einhorn, dem heiligen Tier des Halbgottes Nandus, für normale Aventurier einen Frevel darstellt, so wäre jetzt der richtige Moment gekommen, es beiläufig zu erwähnen.
 
 
-Anschließend begleitet sie Vittel und die Charaktere bis Wengenholm. Sollten sich am Rande des Weges im Wald noch gut verschnürte Räuber befinden, so kann Janne bei der Ablieferung in der Angenburg behilflich sein. Der Burgvogt wird den Charakteren außer den 5 Dukaten Kopfgeld pro Räuber eine warme Mahlzeit sowie ein Dach über dem Kopf für die anbrechende Nacht anbieten. Vittel wird bei Janne in der gräflichen Schreibstube übernachten, so dass die beiden sich jetzt verabschieden und das Abenteuer zu seinem Ende kommt. 
+Das Zauberwesen wird die Charaktere nicht angreifen, sie allerdings auch nicht auf weniger als zwölf Schritt an den Baum heranlassen.
+Da es ständig laut schnaubt, ist eine fehlerlose Verständigung mit \textbf{Vittel} und \textbf{Janne Pflögler} nicht möglich.
+\textbf{Janne} hatte nach den ersten Gedankenbildern des \textbf{Einhorn}s sich mit Antimagie versucht zu schützen.
+Dafür hatte sie zunächst den Zauber \biglittlecap{Verständigung stören} mit der Modifikation \textit{Zauber aufheben} gewirkt, noch bevor das \textbf{Einhorn} versuchen konnte, ihr vom zermahlenen Alicorn zu berichten.
+Während das \textbf{Einhorn} noch verblüfft war, dass die junge Hexe versuchte, sich gegen seine Kontaktaufnahme zu wehren, wirkte \textbf{Janne} den Zauber \biglittlecap{Verständigung stören} mit der Modifikation \textit{Magie unterdrücken}.
+Allerdings muss sie den Zauber stündlich neu wirken, um nicht von den Bildern des \textbf{Einhorn}s überwältigt zu werden.
+Dadurch besitzt sie noch gerade genug Astralenergie, um ein kleines Ästchen mit einer kurzen, geschriebenen Nachricht per \biglittlecap{Hexenholz} den Charakteren zunächst zukommen und wieder zurückfliegen zu lassen. 
+
+
+\textbf{Janne} befindet sich unter Schock und schafft es daher nicht, die Botschaften des \textbf{Einhorn}s zu verstehen.
+Die Charaktere müssen also versuchen, den Bedrängten klarzumachen, dass das \textbf{Einhorn} bei ihnen zerriebenes Alicorn eines gewaltsam getöteten Einhorns vermutet.
+Das \textbf{Einhorn} wird die Charaktere nicht an den Baum heranlassen, ein Überklettern von benachbarten Bäumen ist dagegen möglich.
+Letztlich sollte jede halbwegs logische Idee von Seiten der Spielenden honoriert werden.
+
+
+Sobald \textbf{Vittel} die tatsächliche Absicht des \textbf{Einhorn}s verstanden hat, wird er die Phiole auf den Boden werfen, wo sie vom \textbf{Einhorn} sofort zertreten und der Inhalt mit den Hufen in den Waldboden gestampft wird.
+Anschließend verschwindet die magische Kreatur mit einem letzten Schnauben genauso schnell im Wald, wie sie erschienen ist.
+
+
+\textbf{Vittel} und \textbf{Janne} sollten dann vom Baum klettern können, abgesehen von ein paar Kratzern körperlich wohlbehalten, die Knie noch schlotternd vom Schreck.
+\textbf{Janne} setzt sich erst einmal auf den Waldboden, um ihre Gedanken zu sammeln. Schnell kann sie wieder klar denken und begreift das Geschehene. Im Zweifelsfall kann sie die Charaktere über den Hintergrund der Phiole aufklären.
+
+Sowohl \textbf{Vittel} als auch \textbf{Janne} werden sich sehr dankbar zeigen, die junge Hexe sie in die Stube ihres Hauses einladen und erst einmal einen kräftigenden Tee aufbrühen, zu dem sie noch leckere Haferplätzchen stellt.
+Zum Dank gibt sie den Charakteren eine Feldflasche mit 3 Portionen Einbeerentrank (1\,x\,HQ), der noch 18 Monde haltbar ist, ein Döschen mit 2 Erschöpfungspastillen, die noch 12 Monde haltbar sind sowie ein Tiegelchen mit 2 Portionen Brandsalbe (2\,x\,HQ).
+\textbf{Vittel} bezahlt sie einen anständigen Preis für den Heiltrank (den sie nicht bereit ist, weiter zu veräußern, geschweige denn zu verschenken).
+
+
+Anschließend begleitet sie \textbf{Vittel} und die Charaktere bis \textbf{Wengenholm}.
+Sollten sich am Rande des Weges im Wald noch gut verschnürte Räuber befinden, so kann \textbf{Janne} bei der Ablieferung in der Angenburg behilflich sein.
+Der \textbf{Burgvogt} wird den Charakteren außer den 5 Dukaten Kopfgeld pro Räuber eine warme Mahlzeit sowie ein Dach über dem Kopf für die anbrechende Nacht anbieten.
+\textbf{Vittel} wird bei \textbf{Janne} in der gräflichen Schreibstube übernachten, so dass die beiden sich jetzt verabschieden und das Abenteuer zu seinem Ende kommt. 
 
 \abschnitt{Der Mühen Lohn}
-Neben den Alchimika und den hoffentlich durch die Ergreifung der Räuber verdienten Dukaten gibt es auch noch **30 EP** für die durchgemachten Strapazen.
+Neben den Alchimika und den hoffentlich durch die Ergreifung der Räuber verdienten Dukaten gibt es auch noch \textit{30 EP} für die durchgemachten Strapazen.
 
 
  
@@ -404,15 +439,15 @@ Neben den Alchimika und den hoffentlich durch die Ergreifung der Räuber verdien
 \abschnitt{Anhang: Dramatis Personae}
 
 \subsection[Vittel, Gehilfe im Peraine-Tempel]{Vittel, Gehilfe im Peraine-Tempel zu Wengerode}
-Der sympathische Gehilfe des Peraine-Tempels zu Boggerode entspricht mit seinem vollen, schwarzen Haaren und dem dichten Vollbart ganz dem Bild des typischen Koschers.
+Der sympathische Gehilfe des \textbf{Peraine}-Tempels zu \textbf{Boggerode} entspricht mit seinem vollen, schwarzen Haaren und dem dichten Vollbart ganz dem Bild des typischen Koschers.
 Trotz seiner Körpergröße von neuneinhalb Spann ist der 21-jährige recht behändig.
 Er kann nicht nur Lesen und Schreiben, sondern ist auch sehr erfahren im Umgang mit Pflanzen und Tieren.
 Nicht nur mit seinem Bartwuchs, auch mit seiner Liebe für das Hopfenbräu ähnelt er den Angroschim.
 
 
 \absatz{Janne Pflögler, gräfliche Schreiberin}
-Die gutaussehende Hexe mit dem langen rotbraunen Haar ist nicht nur als Schreiberin für Graf Jallik tätig, sondern steht ihm bei wichtigen Anlässen auch als diskrete Beraterin arkanen Fragen und sogar als magische Beschützerin zur Seite. Allerdings führt ihre schnelle Reaktionsfähigkeit dazu, dass sie die Gedankensprache des Einhorns als magischen Angriff wahrnimmt und sofort mit Antimagie unterbricht.
+Die gutaussehende Hexe mit dem langen rotbraunen Haar ist nicht nur als Schreiberin für Graf \textbf{Jallik} tätig, sondern steht ihm bei wichtigen Anlässen auch als diskrete Beraterin arkanen Fragen und sogar als magische Beschützerin zur Seite. Allerdings führt ihre schnelle Reaktionsfähigkeit dazu, dass sie die Gedankensprache des \textbf{Einhorn}s als magischen Angriff wahrnimmt und sofort mit Antimagie unterbricht.
 
-Sie kleidet sich praktisch mit einer einfachen, hellen Leinenbluse und einer weiten, dunkelbraunen Hose, in deren Taschen sich ihre Smaragdnatter Havel versteckt hält. Ihr Beruf lässt sich an ihren stets mit Tinte befleckten Händen leicht erkennen.
+Sie kleidet sich praktisch mit einer einfachen, hellen Leinenbluse und einer weiten, dunkelbraunen Hose, in deren Taschen sich ihre Smaragdnatter \textbf{Havel} versteckt hält. Ihr Beruf lässt sich an ihren stets mit Tinte befleckten Händen leicht erkennen.
 
 \spaltenende
